# Word_RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  word_rag.db
docs/: DAX-11367 Автоматическая сортировка при завершении сборки (Негабарит ИМ).DOCX  DAX-7404_Комплектации крупногабаритных товаров МП_Модификация карточки номенклатуры.docx  DAX-7405_Комплектация крупно габаритных товаров ИМ.docx  DAX-7406_Упаковка негабарита ИМ_V4 (1).DOCX  DAX-7407_Комплектации крупногабаритных товаров МП_ТСД_Режим Сборка негабарита ИМ_V4.docx  functional_design_ru.md  jira_breakdown.md
migrations/: 001_init.sql
src/word_rag/: __init__.py  ai_provider.py  api.py  chunking.py  config.py  docx_parser.py  embeddings.py  entity_extractor.py  filtering.py  main.py  models.py  rag_service.py  storage.py  storage_sqlite.py
tests/: test_api.py  test_api_settings.py  test_chunking.py  test_config.py  test_docx_parser.py  test_entity_extractor.py  test_filtering.py  test_rag_service.py  test_storage.py  test_storage_sqlite.py
